log
Thu 20 Apr 2023 04:59:06 PM UTC: 
 tests:  1|8
total_score: 0/70
21c4a6f
Thu 20 Apr 2023 05:04:09 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
beadcdd
Thu 20 Apr 2023 05:08:47 PM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  11|6
total_score: 15/70
303de57
Thu 20 Apr 2023 05:16:12 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
d521539
Thu 20 Apr 2023 05:19:11 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
6170b56
Thu 20 Apr 2023 05:34:41 PM UTC: 
 treemap.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
e83b5c9
Thu 20 Apr 2023 05:35:17 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|6
total_score: 15/70
a241ec6
Thu 20 Apr 2023 05:36:38 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
09c0594
Fri 21 Apr 2023 06:38:36 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  11|6
total_score: 15/70
649537e
Fri 21 Apr 2023 06:39:34 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|6
total_score: 15/70
1da2f55
Fri 21 Apr 2023 06:42:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
ce5250a
Fri 21 Apr 2023 06:42:41 PM UTC: 
 treemap.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  11|6
total_score: 15/70
bdc9d23
Fri 21 Apr 2023 06:42:59 PM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
6c62096
Fri 21 Apr 2023 06:46:59 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
1c4769f
Fri 21 Apr 2023 06:50:05 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|6
total_score: 15/70
58fc1d0
Fri 21 Apr 2023 06:50:49 PM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++++------------------------------
 1 file changed, 28 insertions(+), 30 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:21: error: implicit declaration of function ‘createPair’ [-Werror=implicit-function-declaration]
   67 |     Pair* newPair = createPair(key, value);
      |                     ^~~~~~~~~~
treemap.c:67:21: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:68:25: error: too few arguments to function ‘createTreeNode’
   68 |     TreeNode* newNode = createTreeNode(newPair);
      |                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
treemap.c:78:9: error: ‘TreeMap’ has no member named ‘size’
   78 |     tree->size++;
      |         ^~
cc1: all warnings being treated as errors
Compilation failed
ed6b36a
Fri 21 Apr 2023 06:50:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:21: error: implicit declaration of function ‘createPair’ [-Werror=implicit-function-declaration]
   67 |     Pair* newPair = createPair(key, value);
      |                     ^~~~~~~~~~
treemap.c:67:21: error: initialization of ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:68:25: error: too few arguments to function ‘createTreeNode’
   68 |     TreeNode* newNode = createTreeNode(newPair);
      |                         ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
   29 | TreeNode * createTreeNode(void* key, void * value) {
      |            ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7cc46a7
Fri 21 Apr 2023 06:52:24 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
14cae7c
Fri 21 Apr 2023 06:57:46 PM UTC: 
 treemap.c | 63 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 42 insertions(+), 21 deletions(-)
 tests:  13|5
total_score: 25/70
660483e
Fri 21 Apr 2023 07:00:16 PM UTC: 
 treemap.c | 10 +---------
 1 file changed, 1 insertion(+), 9 deletions(-)
 tests:  13|5
total_score: 25/70
72763a8
Fri 21 Apr 2023 07:05:06 PM UTC: 
 treemap.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
 tests:  13|5
total_score: 25/70
7207788
Fri 21 Apr 2023 07:12:15 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
3c81fcf
Fri 21 Apr 2023 07:19:41 PM UTC: 
 treemap.c | 21 ++++++++-------------
 1 file changed, 8 insertions(+), 13 deletions(-)
 tests:  11|6
total_score: 15/70
fd38111
Fri 21 Apr 2023 07:19:48 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|5
total_score: 25/70
b24aecc
Fri 21 Apr 2023 07:25:48 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
30d6574
Fri 21 Apr 2023 11:10:05 PM UTC: 
 treemap.c | 59 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 59 insertions(+)
 tests:  0|0
dab7204
Fri 21 Apr 2023 11:11:17 PM UTC: 
 treemap.c | 58 ----------------------------------------------------------
 1 file changed, 58 deletions(-)
 tests:  15|4
total_score: 25/70
1972db5
Fri 21 Apr 2023 11:33:31 PM UTC: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
d5082e5
Fri 21 Apr 2023 11:48:14 PM UTC: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  17|4
total_score: 35/70
151d855
Sat 22 Apr 2023 03:47:14 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  19|4
total_score: 40/70
7ae6c85
Sat 22 Apr 2023 03:52:52 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:181:12: error: variable ‘node’ set but not used [-Werror=unused-but-set-variable]
  181 |   TreeNode*node = tree->root;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
9e16948
Sat 22 Apr 2023 03:53:37 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  21|3
total_score: 45/70
760fc5f
Sat 22 Apr 2023 05:36:37 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  22|2
total_score: 50/70
1a11b25
Sat 22 Apr 2023 05:40:18 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  22|2
total_score: 50/70
30d8d8f
Sat 22 Apr 2023 05:48:05 AM UTC: 
 treemap.c | 26 ++++++++++++++++++++------
 1 file changed, 20 insertions(+), 6 deletions(-)
 tests:  25|1
total_score: 60/70
8fccc92
Sat 22 Apr 2023 05:56:47 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
b6f2dd7
Sat 22 Apr 2023 06:00:24 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
treemap.c:209:1: error: expected identifier or ‘(’ before ‘}’ token
  209 | }
      | ^
Compilation failed
16af24d
